[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Sprites/duck_enemy.png" type="Texture" id=1]
[ext_resource path="res://Src/Enemies/Enemy1.gd" type="Script" id=2]
[ext_resource path="res://Resources/WhiteFlash.shader" type="Shader" id=3]
[ext_resource path="res://Assets/gun.png" type="Texture" id=4]
[ext_resource path="res://Assets/Audio/Sounds/shoot1.wav" type="AudioStream" id=5]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/white_progress = 0.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7.68987, 11.3951 )

[sub_resource type="Animation" id=7]
resource_name = "Hit"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/white_progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 0.0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "Walk"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( 1, 0 ), Vector2( 2, 0 ), Vector2( 3, 0 ), Vector2( 4, 0 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0 ]
}

[node name="Enemy1" type="KinematicBody2D" groups=[
"Enemy",
]]
collision_layer = 4
collision_mask = 17
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
z_index = 2
texture = ExtResource( 1 )
vframes = 3
hframes = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.280933 )
shape = SubResource( 2 )

[node name="WalkTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="IdleTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="ComputeDirectionTimer" type="Timer" parent="."]
one_shot = true

[node name="ShootTimer" type="Timer" parent="."]
one_shot = true

[node name="HitAnimationPlayer" type="AnimationPlayer" parent="."]
anims/Hit = SubResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Idle = SubResource( 8 )
anims/Walk = SubResource( 9 )

[node name="Gun" type="Sprite" parent="."]
position = Vector2( 0.125, 2.625 )
z_index = 3
texture = ExtResource( 4 )
offset = Vector2( 7.26219, 1.85338 )
vframes = 2
hframes = 4

[node name="GunPoint" type="Node2D" parent="Gun"]
position = Vector2( 13.5551, 0.438295 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Gun"]
anims/Shoot = SubResource( 6 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -5.057
max_distance = 400.0
attenuation = 1.68179
bus = "Sound"
[connection signal="timeout" from="WalkTimer" to="." method="_on_WalkTimer_timeout"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_IdleTimer_timeout"]
[connection signal="timeout" from="ComputeDirectionTimer" to="." method="_on_ComputeDirectionTimer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
